Inseri mais um item na lista

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li>Texto 2</li>
         <li>Texto 3</li>
         <li>Texto 4</li>
+        <li>Texto 5</li>
     </ul>
 </body>
 </html>
