Inserindo mais um curso

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li>Texto 3</li>
         <li>Texto 4</li>
         <li>Texto 5</li>
+        <li>Texto 6</li>
     </ul>
 </body>
 </html>
